--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     "strictBindCallApply": true,
     "types": ["jest", "@types/testing-library__jest-dom"]
   },
-  "include": ["src"],
+  "include": ["src", "../mendokusai-react/client/src/components/Layout/Layout.jsx"],
   "exclude": ["**/node_modules", "**/.*/"]
 }
