--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.4.4",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^1.0.0"
