--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.5.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.4",
     "tslib": "^2.2.0",
