--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "buy-or-lease",
+  "name": "smart-monke",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.41",
+    "@types/node": "^14.14.43",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
@@ -19,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^7.0.4",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
