--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-number-format": "^4.5.5",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.4",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
